syntax = "proto3";

package hospital;

option java_multiple_files = true;
option java_package = "org.hospital.login";

message LoginResquest {
  string name = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

service LoginService {
  rpc MakeLogin(LoginResquest) returns (LoginResponse);
}